@@ -1,0 +1,69 @@
+#FIG 3.2
+Landscape
+Center
+Inches
+Letter  
+100.00
+Single
+-2
+1200 2
+0 32 #a2a2a2
+0 33 #cbcbcb
+6 5250 1500 6750 3150
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 5962 2925 84 84 5925 2850 6000 3000
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 5362 2925 84 84 5325 2850 5400 3000
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 5962 2325 84 84 5925 2250 6000 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 5362 2325 84 84 5325 2250 5400 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 5362 1725 84 84 5325 1650 5400 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 5962 1725 84 84 5925 1650 6000 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 6562 1725 84 84 6525 1650 6600 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 6562 2325 84 84 6525 2250 6600 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 6562 2925 84 84 6525 2850 6600 3000
+-6
+6 8325 1500 9825 3150
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 9037 2925 84 84 9000 2850 9075 3000
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 8437 2925 84 84 8400 2850 8475 3000
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 9037 2325 84 84 9000 2250 9075 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 8437 2325 84 84 8400 2250 8475 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 8437 1725 84 84 8400 1650 8475 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 9037 1725 84 84 9000 1650 9075 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 9637 1725 84 84 9600 1650 9675 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 9637 2325 84 84 9600 2250 9675 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 9637 2925 84 84 9600 2850 9675 3000
+-6
+6 2325 1500 3825 3150
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 3037 2925 84 84 3000 2850 3075 3000
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 2437 2925 84 84 2400 2850 2475 3000
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 3037 2325 84 84 3000 2250 3075 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 2437 2325 84 84 2400 2250 2475 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 2437 1725 84 84 2400 1650 2475 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 3037 1725 84 84 3000 1650 3075 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 3637 1725 84 84 3600 1650 3675 1800
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 3637 2325 84 84 3600 2250 3675 2400
+1 4 0 1 0 7 50 -1 0 0.000 1 0.0000 3637 2925 84 84 3600 2850 3675 3000
+-6
+2 1 0 2 20 7 60 -1 -1 0.000 0 0 -1 0 0 2
+	 5385 1755 6555 2925
+2 1 0 2 20 7 60 -1 -1 0.000 0 0 -1 0 0 2
+	 6570 1725 5385 2910
+2 1 0 2 20 7 60 -1 -1 0.000 0 0 -1 0 0 2
+	 3045 1725 3045 2925
+2 1 0 2 20 7 60 -1 -1 0.000 0 0 -1 0 0 2
+	 2460 2325 3630 2325
+2 1 0 2 20 7 60 -1 -1 0.000 0 0 -1 0 0 2
+	 8475 2310 9645 2310
+2 1 0 2 20 7 60 -1 -1 0.000 0 0 -1 0 0 2
+	 9045 1740 9045 2940
+2 1 0 2 20 7 60 -1 -1 0.000 0 0 -1 0 0 2
+	 9645 1710 8460 2895
+2 1 0 2 20 7 60 -1 -1 0.000 0 0 -1 0 0 2
+	 8482 1747 9652 2917
+2 2 0 0 7 7 60 -1 -1 0.000 0 0 -1 0 0 5
+	 150 1500 10350 1500 10350 4050 150 4050 150 1500
+4 0 -1 50 -1 1 20 0.0000 4 270 1485 300 3600 Connectivity:\001
+4 0 0 50 -1 0 20 0.0000 4 195 135 3000 3600 0\001
+4 0 0 50 -1 0 20 0.0000 4 195 135 6000 3600 1\001
+4 0 0 50 -1 0 20 0.0000 4 195 135 9000 3600 2\001
+4 0 0 50 -1 1 20 0.0000 4 270 1425 8250 3900 (king moves)\001
+4 0 0 50 -1 1 20 0.0000 4 270 2250 4800 3900 (only bishop moves)\001
+4 0 0 50 -1 1 20 0.0000 4 270 1980 1950 3900 (only rook moves)\001
