@@ -1,6 +1,8 @@
 Changes made between Gamera File Releases
 =========================================
 
+ - new deformation plugins degrade_kanungo and white_speckles
+
  - new plugins colors_to_labels (category "Color") and
    ccs_from_labeled_image (category "Utility") for reading
    in manually labeled ground truth data (thanks to Hasan Yilidz)
